# spotdog_8dof_22_10

./: CMakeLists.txt  README.md  package.xml
action/: normal_walk.py  test_data.py
config/: config_xacro.yaml
data/: joint_angle_1.npy  joint_angle_2.npy  joint_angle_3.npy  joint_angle_4.npy  joint_angle_5.npy  joint_angle_6.npy  joint_angle_7.npy  joint_angle_8.npy
launch/: xacro.launch  xacro_control.launch
urdf/: spot.urdf
xacro/joint/: joint_to_joint.xacro
xacro/link/: base.xacro  leg.xacro
xacro/model/: spotdog.xacro
xacro/transmission/: transmission.xacro
